[Update]division_新規登録・編集機能実装および、department,division,position一覧画面にページネーションを実装_2023-0225-1637

--- a/app/views/public/departments/index.html.erb
+++ b/app/views/public/departments/index.html.erb
@@ -19,6 +19,8 @@
         </tbody>
         <% end %>
       </table>
+      <!--↓ページネーションを表示させるための記述-->
+      <%= paginate @departments %>
     </div>
   </div>
   <div class="row" style="margin-top:20px">
