--- a/app/views/public/staffs/index.html.erb
+++ b/app/views/public/staffs/index.html.erb
@@ -1,41 +1,1 @@
-<div class="container" style="margin:30px">
-  <div class="row" style="margin:20px">
-    <h5 class="text-left">社員一覧</h5>
-  </div>
-  <div class="row">
-    <div class = "col-sm-12 col-md-10 col-lg-8 px-5 px-sm-0">
-      <table class="table table-bordered border-bg">
-        <thead class="bg-success text-white">
-          <th>プロフィール画像</th>
-          <th>氏名</th>
-          <th>所属組織</th>
-          <th>役職</th>
-          <th>電話番号</th>
-          <th>メールアドレス</th>
-        </thead>
-        <% @staffs.each do |staff| %>
-        <tbody>
-          <td><%= image_tag staff.get_profile_image(50,50) %></td>
-          <td>
-            <!--社員の氏名から社員の詳細情報ページに遷移させる-->
-            <%= link_to public_staff_path(staff.id) do %>
-              <!--full_nameの定義は、app/models/staff.rbを参照-->
-              <%= staff.full_name %>
-            <% end %>
-          </td>
-          <!--アソシエーションを組んでいるdepartmentsテーブルから、departments_name_id/division_name_idの情報をまとめたものを表示させる-->
-          <td><%= staff.department.name %>/<%= staff.division.name %></td>
-          <!--アソシエーションで組んでいるpositonsテーブルから、該当する役職のname_id情報を表示させる。-->
-          <td><%= staff.position.name %></td>
-          <td><%= staff.telephone_number %></td>
-          <td><%= staff.email %></td>
-        </tbody>
-        <% end %>
-      </table>
-    </div>
-  </div>
-  <div class ="row mt-5 d-flex justify-content-center">
-    <!--↓ページネーションを表示させるための記述-->
-    <%= paginate @staffs %>
-  </div>
-</div>
+<%= render 'lists', staffs: @staffs %>
