--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,4 +1,5 @@
 <div class="container text-center" style="margin-top:30px">
+    <div class="row" style="margin-top:60px"></div>
     <div class="row" style="margin:60px">
         <div class="col-8 mx-auto">
             <h1 class="text-center" style="font-size:50px">
