[Update]renraku_net_2023_0319_1356

--- a/app/views/public/staffs/_lists.html.erb
+++ b/app/views/public/staffs/_lists.html.erb
@@ -9,7 +9,7 @@
     first_name: @first_name, last_name: @last_name_kana, first_name_kana: @first_name_kana, department_id: @department_id,
     division_id: @division_id, position_id: @position_id,) %>
   </div>
-  <div class="row">
+  <div class="row d-flex">
     <div class = "col-sm-12 col-md-10 col-lg-8 px-5 px-sm-0">
       <table class="table table-bordered border-bg">
         <thead class="bg-success text-white">
