--- a/app/views/public/staffs/search_form.html.erb
+++ b/app/views/public/staffs/search_form.html.erb
@@ -1,10 +1,14 @@
-<div class="container" style="margin:30px">
-    <div class="row" style="margin-top:20px">
-        <h5>社員検索</h5>
+<div class="container">
+    <div class="mt-5">
+
     </div>
     <div class="row">
-        <div class="col-sm-12 col-md-10 col-lg-8 px-5 px-sm-0">
+        <div class="col-sm-12 col-md-10 col-lg-8 px-5 px-sm-0 mx-auto">
         <%= form_with url: search_public_staffs_path, method: :get do |f| %>
+        <div class="card">
+            <div class="card-header">
+                <h5 class="m-0">社員検索</h5>
+            </div>
             <table class="table table-borderless" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
                 <thead>
                     <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">氏名</th>
@@ -37,6 +41,7 @@
             </table>
 
             <%= f.submit "検索" %>
+            </div>
         <% end %>
         </div>
     </div>
