--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,75 +1,76 @@
 <!--社員登録画面-->
 <div class="container text-center" style="margin-top:30px">
-  <div class="row mx-auto" style="margin:30px">
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0">
-      <h3>新規登録</h3>
-    </div>
-  </div>
-  <div class="row mx-auto">
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0">
+  <div class="mt-5"></div>
+  <div class="row">
+    <div class="col-sm-12 col-md-10 col-lg-8 px-5 px-sm-0 mx-auto">
     <%= form_with model: @staff,url:staff_registration_path , local: true do |f| %>
-      <%= render "public/shared/error_messages", resource: resource %>
-      <table class="table table-borderless" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
-          <thead class="col-3">
-            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
-              <!--full_nameの定義は、app/models/customer.rbを参照-->
-              <%= f.label :full_name,"名前" %>
-            </th>
-            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :full_name_kana, "フリガナ" %></th>
-            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :email, "電話番号" %></th>
-            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :postal_code, "メールアドレス" %></th>
-            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :address, "勤務形態" %></th>
-            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :telephone_number, "所属部名" %></th>
-            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :telephone_number, "所属課名" %></th>
-            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :telephone_number, "役職" %></th>
-            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :password, "パスワード（6文字以上）" %></th>
-            <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :password_confirmation, "パスワード（確認用）" %></th>
-          </thead>
-          <tbody class="col-9 text-left">
-            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
-              <!--autocomplete:"カラム名"→自動入力機能/placeholder:"〇〇〇〇"-->
-              (姓)　<%= f.text_field :last_name,autocomplete: "last_name",placeholder: "姓" %>
-              &emsp;&emsp;
-              <!--autocomplete:"カラム名"→自動入力機能/placeholder:"〇〇〇〇"-->
-              (名)　<%= f.text_field :first_name,autocomplete: "first_name",placeholder: "名" %>
-            </td>
-            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
-              (セイ)<%= f.text_field :last_name_kana,autocomplete: "last_name_kana",placeholder: "セイ" %>
-              &emsp;&emsp;
-              (メイ)<%= f.text_field :first_name_kana,autocomplete: "first_name_kana",placeholder: "メイ" %>
-            </td>
-            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
-              &emsp;&emsp;&emsp;<%= f.text_field :telephone_number,placeholder: "000-1111-2222", :size=>"30" %>
-            </td>
-            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
-              &emsp;&emsp;&emsp;<%= f.text_field :email,autocomplete: "email",placeholder: "sample@renrakunet.com", :size=>"30" %>
-            </td>
-            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
-              <!--「勤務形態」をプルダウンリストから選択できるようにする-->
-              &emsp;&emsp;&emsp;<%= f.select :work_style ,Staff.work_styles.keys.map { |k| [t("enums.staff.work_style.#{k}"), k] }, { include_blank: "選択ください" }  %>
-            </td>
-            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
-              <!--部名（departments）モデル情報を選択できるようにしている-->
-              &emsp;&emsp;&emsp;<%= f.collection_select(:department_id, Department.all,:id ,:name) %>
-            </td>
-            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
-              <!--課名（divisions）モデル情報を選択できるようにしている-->
-              &emsp;&emsp;&emsp;<%= f.collection_select(:division_id, Division.all,:id,:name) %>
-            </td>
-            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
-              <!--役職名（positions）モデル情報を選択できるようにしている-->
-              &emsp;&emsp;&emsp;<%= f.collection_select(:position_id, Position.all,:id,:name) %>
-            </td>
-            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
-              &emsp;&emsp;&emsp;<%= f.password_field :password %>
-            </td>
-            <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
-              &emsp;&emsp;&emsp;<%= f.password_field :password_confirmation %>
-            </td>
-          </tbody>
-      </table>
-      <div class = "actions">
-        <%= f.submit "新規登録", class:'btn btn-md btn-success' %>
+      <%#= render "public/shared/error_messages", resource: resource %>
+      <div class="card">
+        <div class="card-header">
+          <h4>新規登録</h4>
+        </div>
+        <table class="table table-borderless" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
+            <thead class="col-3">
+              <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                <!--full_nameの定義は、app/models/customer.rbを参照-->
+                <%= f.label :full_name,"名前" %>
+              </th>
+              <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :full_name_kana, "フリガナ" %></th>
+              <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :email, "電話番号" %></th>
+              <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :postal_code, "メールアドレス" %></th>
+              <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :address, "勤務形態" %></th>
+              <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :telephone_number, "所属部名" %></th>
+              <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :telephone_number, "所属課名" %></th>
+              <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :telephone_number, "役職" %></th>
+              <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :password, "パスワード（6文字以上）" %></th>
+              <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= f.label :password_confirmation, "パスワード（確認用）" %></th>
+            </thead>
+            <tbody class="col-9 text-left">
+              <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                <!--autocomplete:"カラム名"→自動入力機能/placeholder:"〇〇〇〇"-->
+                (姓)　<%= f.text_field :last_name,autocomplete: "last_name",placeholder: "姓" %>
+                &emsp;&emsp;
+                <!--autocomplete:"カラム名"→自動入力機能/placeholder:"〇〇〇〇"-->
+                (名)　<%= f.text_field :first_name,autocomplete: "first_name",placeholder: "名" %>
+              </td>
+              <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                (セイ)<%= f.text_field :last_name_kana,autocomplete: "last_name_kana",placeholder: "セイ" %>
+                &emsp;&emsp;
+                (メイ)<%= f.text_field :first_name_kana,autocomplete: "first_name_kana",placeholder: "メイ" %>
+              </td>
+              <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                &emsp;&emsp;&emsp;<%= f.text_field :telephone_number,placeholder: "000-1111-2222", :size=>"30" %>
+              </td>
+              <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                &emsp;&emsp;&emsp;<%= f.text_field :email,autocomplete: "email",placeholder: "sample@renrakunet.com", :size=>"30" %>
+              </td>
+              <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                <!--「勤務形態」をプルダウンリストから選択できるようにする-->
+                &emsp;&emsp;&emsp;<%= f.select :work_style ,Staff.work_styles.keys.map { |k| [t("enums.staff.work_style.#{k}"), k] }, { include_blank: "選択ください" }  %>
+              </td>
+              <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                <!--部名（departments）モデル情報を選択できるようにしている-->
+                &emsp;&emsp;&emsp;<%= f.collection_select(:department_id, Department.all,:id ,:name) %>
+              </td>
+              <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                <!--課名（divisions）モデル情報を選択できるようにしている-->
+                &emsp;&emsp;&emsp;<%= f.collection_select(:division_id, Division.all,:id,:name) %>
+              </td>
+              <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                <!--役職名（positions）モデル情報を選択できるようにしている-->
+                &emsp;&emsp;&emsp;<%= f.collection_select(:position_id, Position.all,:id,:name) %>
+              </td>
+              <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                &emsp;&emsp;&emsp;<%= f.password_field :password %>
+              </td>
+              <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                &emsp;&emsp;&emsp;<%= f.password_field :password_confirmation %>
+              </td>
+            </tbody>
+        </table>
+        <div class = "actions">
+          <%= f.submit "新規登録", class:'btn btn-md btn-success' %>
+        </div>
       </div>
     <% end %>
     </div>
