--- a/app/views/public/staffs/search_form.html.erb
+++ b/app/views/public/staffs/search_form.html.erb
@@ -1,7 +1,5 @@
 <div class="container">
-    <div class="mt-5">
-
-    </div>
+    <div class="mt-5"></div>
     <div class="row">
         <div class="col-sm-12 col-md-10 col-lg-8 px-5 px-sm-0 mx-auto">
         <%= form_with url: search_public_staffs_path, method: :get do |f| %>
@@ -40,7 +38,7 @@
                 </tbody>
             </table>
 
-            <%= f.submit "検索" %>
+            <%= f.submit "検索", class:'btn btn-md btn-success' %>
             </div>
         <% end %>
         </div>
