[Update]レイアウト調整_2023-0319-2228

--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -68,7 +68,7 @@
               </td>
             </tbody>
         </table>
-        <div class = "actions">
+        <div class = "actions" style="margin-bottom:20px">
           <%= f.submit "新規登録", class:'btn btn-md btn-success' %>
         </div>
       </div>
