--- a/app/views/public/staffs/edit.html.erb
+++ b/app/views/public/staffs/edit.html.erb
@@ -1,7 +1,8 @@
 <p id ="notice"></p>
-<div class="container" style="margin:30px">
-  <div class="row d-flex justify-content-center" style="margin-top:20px">
-    <h5 class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">社員情報編集画面</h5>
+<div class="container">
+  <div class="mt-5"></div>
+  <div class="row mx-auto">
+    <h4 class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">社員情報編集画面</h4>
   </div>
   <div class="row d-flex justify-content-center" style="margin-top:20px">
     <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
