--- a/app/views/public/departments/index.html.erb
+++ b/app/views/public/departments/index.html.erb
@@ -1,29 +1,26 @@
 <p id="notice"></p>
-<div class="container" style="margin:30px">
-  <div class="row">
-    <h5 class="text-left">部名一覧</h5>
+<div class="container" style="margin-top:20px">
+  <div class="row mx-auto">
+    <h4 class="text-center">部名一覧</h4>
   </div>
-  <div class="row" style="margin-top:20px">
+  <div class="row mt-2 mx-auto">
+    <% @departments.each do |department| %>
     <div class = "col-sm-12 col-md-10 col-lg-8 px-5 px-sm-0">
-      <table class="table table-bordered border-dark">
-        <thead class="bg-success text-white">
-          <th>部名</th>
-        </thead>
-        <% @departments.each do |department| %>
-        <tbody>
-          <td>
+      <div class="card">
+        <div class="card-body">
             <%= link_to edit_public_department_path(department.id) do %>
               <%= department.name %>
             <% end %>
-          </td>
-        </tbody>
-        <% end %>
-      </table>
-      <!--↓ページネーションを表示させるための記述-->
-      <%= paginate @departments %>
+        </div>
+      </div>
     </div>
+    <% end %>
   </div>
-  <div class="row" style="margin-top:20px">
+  <div class="row mt-3">
+    <!--↓ページネーションを表示させるための記述-->
+      <%= paginate @departments %>
+  </div>
+  <div class="row mt-2">
     <!--部名の追加欄を作成-->
     <h5>部名追加</h5>
   </div>
@@ -39,7 +36,6 @@
       </ul>
     <% end %>
     <%= form_with model: @department, url:public_departments_path,local:true do |f| %>
-      <%= f.label :name,"部名" %>
       &emsp;&emsp;&emsp;
       <%= f.text_field :name,placeholder:"部名" %>
       &emsp;&emsp;&emsp;
