--- a/app/views/public/divisions/index.html.erb
+++ b/app/views/public/divisions/index.html.erb
@@ -1,29 +1,26 @@
 <p id="notice"></p>
-<div class="container" style="margin:30px">
-  <div class="row">
-    <h5 class="text-left">課名一覧</h5>
+<div class="container" style="margin-top:20px">
+  <div class="row mx-auto">
+    <h4 class="text-center">課名一覧</h4>
   </div>
-  <div class="row" style="margin-top:20px">
-    <div class = "col-sm-12 col-md-10 col-lg-8 px-5 px-sm-0">
-      <table class="table table-bordered border-dark">
-        <thead class="bg-success text-white">
-          <th>課名</th>
-        </thead>
-        <% @divisions.each do |division| %>
-        <tbody>
-          <td>
+  <div class="row mt-2 mx-auto">
+    <% @divisions.each do |division| %>
+    <div class="col-sm-12 col-md-10 col-lg-8 px-5 px-sm-0">
+      <div class="card">
+        <div class="card-body">
             <%= link_to edit_public_division_path(division.id) do %>
               <%= division.name %>
             <% end %>
-          </td>
-        </tbody>
-        <% end %>
-      </table>
-      <!--↓ページネーションを表示させるための記述-->
-      <%= paginate @divisions %>
+        </div>
+      </div>
     </div>
+    <% end %>
   </div>
-  <div class="row" style="margin-top:20px">
+  <div class="row mt-3">
+    <!--↓ページネーションを表示させるための記述-->
+    <%= paginate @divisions %>
+  </div>
+  <div class="row mt-2">
     <!--課名の追加欄を作成-->
     <h5>課名追加</h5>
   </div>
@@ -39,7 +36,6 @@
       </ul>
     <% end %>
     <%= form_with model: @division, url:public_divisions_path,local:true do |f| %>
-      <%= f.label :name,"課名" %>
       &emsp;&emsp;&emsp;
       <%= f.text_field :name,placeholder:"課名" %>
       &emsp;&emsp;&emsp;
