--- a/app/views/public/positions/index.html.erb
+++ b/app/views/public/positions/index.html.erb
@@ -1,29 +1,27 @@
 <p id="notice"></p>
-<div class="container" style="margin:30px">
-  <div class="row">
-    <h5 class="text-left">役職一覧</h5>
+<div class="container" style="margin-top:20px">
+  <div class="row mx-auto">
+    <h4 class="text-center">役職一覧</h4>
   </div>
-  <div class="row" style="margin-top:20px">
-    <div class = "col-sm-12 col-md-10 col-lg-8 px-5 px-sm-0">
-      <table class="table table-bordered border-dark">
-        <thead class="bg-success text-white">
-          <th>役職</th>
-        </thead>
-        <% @positions.each do |position| %>
-        <tbody>
-          <td>
-            <%= link_to edit_public_position_path(position.id) do %>
-              <%= position.name %>
-            <% end %>
-          </td>
-        </tbody>
-        <% end %>
-      </table>
-      <!--↓ページネーションを表示させるための記述-->
-      <%= paginate @positions %>
+  <div class="row mt-2 mx-auto">
+  <% @positions.each do |position| %>
+    <div class="col-sm-12 col-md-10 col-lg-8 px-5 px-sm-0">
+      <div class="card">
+        <div class="card-body">
+          <%= link_to edit_public_position_path(position.id) do %>
+            <%= position.name %>
+          <% end %>
+        </div>
+      </div>
     </div>
+  <% end %>
   </div>
-  <div class="row" style="margin-top:20px">
+  <div class="row mt-3">
+    <!--↓ページネーションを表示させるための記述-->
+    <%= paginate @positions %>
+  </div>
+
+  <div class="row mt-2">
     <!--役職の追加欄を作成-->
     <h5>役職名追加</h5>
   </div>
@@ -39,7 +37,6 @@
       </ul>
     <% end %>
     <%= form_with model: @position, url:public_positions_path,local:true do |f| %>
-      <%= f.label :name,"役職名" %>
       &emsp;&emsp;&emsp;
       <%= f.text_field :name,placeholder:"役職名" %>
       &emsp;&emsp;&emsp;
