--- a/app/views/public/staffs/_lists.html.erb
+++ b/app/views/public/staffs/_lists.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
-  <div class="row">
-    <h5 class="text-left">社員一覧</h5>
+  <div class="row" style="margin-top:20px">
+    <h3 class="text-center">社員一覧</h3>
   </div>
-  <div class="row mt-5 d-flex justify-content-center">
+  <div class="row mt-5 d-flex text-right">
     <!--csvファイルで出力（エクスポート）させる記述-->
     <!--staff_controllerのsearch定義にて、検索結果を読み込ませるカラムの定義をした後、下記エクスポート条件に入れてあげる-->
     <%= link_to "csvファイルで出力する",search_public_staffs_path(format: :csv, last_name: @last_name,
@@ -78,7 +78,7 @@
   <!--    </table>-->
   <!--  </div>-->
   <!--</div>-->
-  <div class ="row mt-5 d-flex justify-content-center">
+  <div class ="row mt-3 d-flex justify-content-center">
     <!--↓ページネーションを表示させるための記述-->
     <%= paginate staffs %>
   </div>
