--- a/app/views/public/staffs/show.html.erb
+++ b/app/views/public/staffs/show.html.erb
@@ -1,13 +1,14 @@
-<div class="container" style="margin:30px">
-  <div class="row d-flex justify-content-center" style=margin-top:20px>
-    <h5><%= @staffs.full_name %>さんの詳細情報</h5>
+<div class="container">
+  <div class="mt-5"></div>
+  <div class="row mx-auto justify-content-center">
+    <h4 class="text-center"><%= @staffs.full_name %>さんの詳細情報</h4>
   </div>
-  <div class="row d-flex justify-content-center" style="margin-top:20px">
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0">
+  <div class="row mt-5 mx-auto justify-content-center">
+    <div class="col-sm-1 col-md-2 col-lg-6 px-5 px-sm-0">
       <!--get_profile_image(width, height)の定義は、app/models/staff.rbを参照-->
-      <div><%= image_tag @staffs.get_profile_image(200,200) %></div>
+      <div><%= image_tag @staffs.get_profile_image(500,500) %></div>
     </div>
-    <div class="col-sm-12 col-md-8 col-lg-5 px5 px-sm-0">
+    <div class="col-sm-10 col-md-8 col-lg-6 px5 px-sm-0">
       <!--table-borderless:テーブルの枠線をなしに指定-->
       <!---ms-writing-mode: tb-lr;writing-mode: vertical-lr;縦書き表示のコマンド-->
       <table class="table table-borderless" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
