--- a/app/views/public/staffs/search_form.html.erb
+++ b/app/views/public/staffs/search_form.html.erb
@@ -2,44 +2,46 @@
     <div class="mt-5"></div>
     <div class="row mx-auto">
         <div class="col-sm-12 col-md-10 col-lg-8 px-5 px-sm-0">
-        <%= form_with url: search_public_staffs_path, method: :get do |f| %>
-        <div class="card">
-            <div class="card-header">
-                <h5 class="m-0 text-center">社員検索</h5>
+            <%= form_with url: search_public_staffs_path, method: :get do |f| %>
+            <div class="card">
+                <div class="card-header">
+                    <h5 class="m-0 text-center">社員検索</h5>
+                </div>
+                <table class="table table-borderless" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
+                    <thead>
+                        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">氏名</th>
+                        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">フリガナ</th>
+                        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">所属部名</th>
+                        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">所属課名</th>
+                        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">役職</th>
+                    </thead>
+                    <tbody>
+                        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                            (姓)<%= f.text_field :last_name %>
+                            &emsp;&emsp;
+                            (名)<%= f.text_field :first_name %>
+                        </td>
+                        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                            (セイ)<%= f.text_field :last_name_kana %>
+                            &emsp;&emsp;
+                            (メイ)<%= f.text_field :first_name_kana %>
+                        </td>
+                        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                            <%= f.collection_select(:department_id, Department.all,:id ,:name, { include_blank: '選択してください'}) %>
+                        </td>
+                        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                            <%= f.collection_select(:division_id, Division.all,:id,:name, { include_blank: '選択してください'}) %>
+                        </td>
+                        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                            <%= f.collection_select(:position_id, Position.all,:id,:name, { include_blank: '選択してください'}) %>
+                        </td>
+                    </tbody>
+                </table>
+                <div class="actions text-center" style="margin-bottom:20px">
+                    <%= f.submit "　検索　", class:'btn btn-md btn-success' %>
+                </div>
             </div>
-            <table class="table table-borderless" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
-                <thead>
-                    <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">氏名</th>
-                    <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">フリガナ</th>
-                    <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">所属部名</th>
-                    <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">所属課名</th>
-                    <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">役職</th>
-                </thead>
-                <tbody>
-                    <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
-                        (姓)<%= f.text_field :last_name %>
-                        &emsp;&emsp;
-                        (名)<%= f.text_field :first_name %>
-                    </td>
-                    <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
-                        (セイ)<%= f.text_field :last_name_kana %>
-                        &emsp;&emsp;
-                        (メイ)<%= f.text_field :first_name_kana %>
-                    </td>
-                    <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
-                        <%= f.collection_select(:department_id, Department.all,:id ,:name, { include_blank: '選択してください'}) %>
-                    </td>
-                    <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
-                        <%= f.collection_select(:division_id, Division.all,:id,:name, { include_blank: '選択してください'}) %>
-                    </td>
-                    <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
-                        <%= f.collection_select(:position_id, Position.all,:id,:name, { include_blank: '選択してください'}) %>
-                    </td>
-                </tbody>
-            </table>
-            <%= f.submit "検索", class:'btn btn-md btn-success' %>
-            </div>
-        <% end %>
+            <% end %>
         </div>
     </div>
 </div>
