--- a/app/views/public/positions/index.html.erb
+++ b/app/views/public/positions/index.html.erb
@@ -1,11 +1,11 @@
 <p id="notice"></p>
-<div class="container" style="margin-top:20px">
+<div class="container">
   <div class="row mx-auto">
     <h4 class="text-center">役職一覧</h4>
   </div>
   <div class="row mt-2 mx-auto">
   <% @positions.each do |position| %>
-    <div class="col-sm-12 col-md-10 col-lg-8 px-5 px-sm-0">
+    <div class="col-sm-12 col-md-6 col-lg-4 mb-2">
       <div class="card">
         <div class="card-body">
           <%= link_to edit_public_position_path(position.id) do %>
