--- a/app/views/public/staffs/edit.html.erb
+++ b/app/views/public/staffs/edit.html.erb
@@ -1,10 +1,10 @@
 <p id ="notice"></p>
 <div class="container">
-  <div class="mt-5"></div>
-  <div class="row mx-auto">
-    <h4 class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">社員情報編集画面</h4>
+  <div class="mt-3"></div>
+  <div class="row justify-content-center">
+    <h4 class="col-sm-12 col-md-8 col-lg-5 mt-3 mx-auto text-center">社員情報編集画面</h4>
   </div>
-  <div class="row d-flex justify-content-center" style="margin-top:20px">
+  <div class="row d-flex justify-content-center">
     <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <!--local: true:HTMLとしてフォームを送信する場合-->
       <%= form_with model: @staffs,url:public_staff_path(@staffs) ,local:true do |f| %>
@@ -74,7 +74,7 @@
             <% end %>
           </tbody>
         </table>
-        <div class ="col mt-5 d-flex justify-content-center">
+        <div class ="col mt-3 d-flex justify-content-center">
           <%= f.submit "編集内容を保存",class:'btn btn-success' %>
         </div>
       <% end %>
