[Update]レイアウト調整_2023-0320-2109

--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,13 +1,15 @@
-<div class="container text-center" style="marigin-top:30px">
-  <div class="row" style="margin:60px">
+<div class="container">
+  <div class="row mt-5"></div>
+  <div class="row mx-auto">
     <div class="col-8 mx-auto">
       <h2 class="text-center" style="font-size:50px">
         <strong>連絡ネットについて</strong>
       </h2>
     </div>
   </div>
-  <div class="row" style="margin-top:20px">
-    <div class="col-12 mx-auto">
+  <div class="row mt-2 mx-auto">
+    <div class="col-sm-12 col-md-12 col-lg-12 mb-3">
+      <div class="card">
       <span class="text-center" style="font-size:25px">
         社員の見える化を実現できる管理・検索サイトです。<br>
         リモートワーク下で誰がどこに所属しているのか？<br>
@@ -15,6 +17,7 @@
         「誰が、どこに所属しているのか、誰と同じ部署なのか、<br>
         どんな顔をしているのか」把握するためにご活用ください。
       </span>
+      </div>
     </div>
   </div>
 </div>
