--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,6 +1,6 @@
-<div class="container text-center" style="margin-top:30px">
-    <div class="row" style="margin-top:60px"></div>
-    <div class="row" style="margin:60px">
+<div class="container">
+    <div class="row mt-5"></div>
+    <div class="row mx-auto">
         <div class="col-8 mx-auto">
             <h1 class="text-center" style="font-size:50px">
                 <strong>ようこそ連絡ネットへ！</strong>
