--- a/app/views/public/staffs/show.html.erb
+++ b/app/views/public/staffs/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <p id="notice"></p>
   <div class="mt-5"></div>
   <div class="row mx-auto justify-content-center">
     <h4 class="text-center"><%= @staffs.full_name %>さんの詳細情報</h4>
