--- a/app/views/public/positions/edit.html.erb
+++ b/app/views/public/positions/edit.html.erb
@@ -6,7 +6,7 @@
     <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <%= form_with model: @positions,url:public_position_path(@positions),local:true do |f| %>
         <%= f.label:name,"役職名" %>
-        <!--新規登録が失敗した際のエラーメッセージの表示記述-->
+        <!--更新が失敗した際のエラーメッセージの表示記述-->
         <!--errors:モデルにバリデーションをかけた際にエラーの内容を確認できるメソッド。any?と組み合わせることで、エラーが発生しているかを判定できる-->
         <% if @positions.errors.any? %>
           <%= @positions.errors.count %>件のエラーが発生しました
